# linearcal

./: .deactivate.sh  .gitignore  README.md  pyproject.toml
